--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,21 @@
     <color name="icActive">#FFFFFFFF</color>
     <color name="icFocused">#DDFFFFFF</color>
     <color name="icPressed">#AAFFFFFF</color>
+
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+
+    <color name="lily_pink_1">#FFFFFFFF</color>
+    <color name="lily_pink_2">#007F8B</color>
+    <color name="lily_pink_3">#007F8B</color>
+    <color name="lily_pink_4">#007F8B</color>
+    <color name="lily_skyblue">#5fafdd</color>
+    <color name="lily_gray_1">#cccccc</color>
+    <color name="lily_gray_2">#848484</color>
+    <color name="lily_pink_typo">#442c2e</color>
 </resources>
